# garmento

./: README.md
asset-manager/: .env  Dockerfile  pyproject.toml
asset-manager/src/: main.py
asset-manager/src/asset_manager/: storage.py
designer-frontend/: .env  Dockerfile  build.sh  environment.d.ts  next.config.mjs  package.json  tailwind.config.ts
designer-frontend/src/app/: layout.tsx  template.tsx
designer-frontend/src/app/catalogs/: buttons.tsx  create.tsx  page.tsx
designer-frontend/src/app/catalogs/[id]/: page.tsx
designer-frontend/src/app/catalogs/api/: catalogs.ts
designer-frontend/src/app/components/: spinner.tsx
designer-frontend/src/app/components/footer/: index.tsx
designer-frontend/src/app/components/navigation/: api.ts  index.tsx  profile.tsx
designer-frontend/src/app/global-state/: index.ts
designer-frontend/src/app/home/: page.tsx
designer-frontend/src/app/login/: api.ts  page.tsx
designer-frontend/src/app/try-on/: design-selection.tsx  model-selection.tsx  page.tsx  try-on-result.tsx
infrastructure/prod/: garmento.ingress.yml
infrastructure/prod/services/: asset-manager.service.yml  model-api.service.yml  preprocessor.service.yml  service-registry.service.yml  try-on-api.service.yml
model-api/: .env  .gitignore  Dockerfile  README.md  alembic.ini  build.sh  pyproject.toml
model-api/fixtures/: 00057_00.json
model-api/src/migrations/: env.py
model-api/src/migrations/versions/: 20240317_222523-2c8d19073453_init_job_table.py
model-api/src/model_api/: main.py  module.py
model-api/src/model_api/adapters/: file_storage.py
model-api/src/model_api/adapters/agnostic_parser/: masks.py  pose_and_segment_agnostic.py
model-api/src/model_api/adapters/agnostic_parser/__tests__/: test_agnostic_parser.py
model-api/src/model_api/adapters/human_segmentation/: self_correct_human_segmentator.py  transforms.py
model-api/src/model_api/adapters/human_segmentation/__tests__/: test_self_correct_human_segmentator.py
model-api/src/model_api/adapters/pose_parser/: model.py  openpose_parser.py  torch_openpose.py  util.py
model-api/src/model_api/adapters/pose_parser/__tests__/: test_openpose_parser.py
model-api/src/model_api/adapters/synthesizer/: try_on_synthesizer_sdafnet.py
model-api/src/model_api/adapters/synthesizer/__tests__/: test_synthesizer.py
model-api/src/model_api/api/: model_endpoints.py  model_router.py
model-api/src/model_api/db/: try_on_repository.py
model-api/src/model_api/services/: checkpoint_service.py  inference_service.py  result_storage_service.py  try_on.py  try_on_repository.py
model-api/src/model_api/services/__tests__/: test_try_on_inferrer.py
model-api/src/model_api/services/viton_hd/: data_loader.py  inputs.py  model.py  networks.py  utils.py
model-api/tests/services/: test_data_loader.py
preprocessor/: .env  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
preprocessor/models/graphonomy/: inference.pth
preprocessor/posenet_models/: mobilenet_v1_101.pth
preprocessor/src/preprocessor/: module.py
preprocessor/src/preprocessor/api/: health_router.py  responses.py  router.py  static_images_router.py
preprocessor/src/preprocessor/db/: job_repository_sqla.py
preprocessor/src/preprocessor/scheduler/: job_scheduler.py
preprocessor/src/preprocessor/services/: job_scheduler.py  jobs.py  preprocessing_service.py
serviceregistry/: build.gradle.kts
serviceregistry/src/main/resources/: application.yml
try-on-extension/src/: App.js  index.js
try-on-extension/src/api/: auth.js  designs.js  try-on.js
tryonserver/: build.gradle.kts
tryonserver/src/main/resources/: application.yml
(+40 files in other folders)
