[project]
name = "model-api"
version = "0.1.0"
description = "Model Registry API for Garmento system"
authors = [
    {name = "Hai Binh Do", email = "binhdoitsme@gmail.com"},
]
dependencies = [
    "torch>=2.2.1",
    "opencv-python>=4.9.0.80",
    "torchvision>=0.17.1",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.1",
    "scipy>=1.12.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "mypy>=1.9.0",
    "pytest-mock>=3.12.0",
    "types-Pillow>=10.2.0.20240311",
]

[tool.pdm.scripts]
_.env_file = ".env"
test = "pytest -s src"
