[project]
name = "model-api"
version = "0.1.0"
description = "Model Registry API for Garmento system"
authors = [
    {name = "Hai Binh Do", email = "binhdoitsme@gmail.com"},
]
dependencies = [
    "torch>=2.2.2",
    "opencv-python>=4.9.0.80",
    "torchvision>=0.17.2",
    # "onnx>=1.16.0",
    # "onnxruntime>=1.17.1",
    # "scipy>=1.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "injector>=0.21.0",
    "python-multipart>=0.0.9",
    # "py-eureka-client>=0.11.10",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "mypy>=1.9.0",
    "pytest-mock>=3.12.0",
    "types-Pillow>=10.2.0.20240311",
]

[tool.pdm.scripts]
_.env_file = ".env"
test = "pytest tests"
dev = "uvicorn model_api.main:app --reload --app-dir src"
create_migration = "alembic revision --autogenerate" # -m "<message>"
apply_migration = "alembic upgrade head"
rollback_migration = "alembic downgrade head-1"

# [[tool.pdm.source]]
# type = "find_links"
# name = "torch"
# url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
# include_packages = ["torch", "torchvision"]
# exclude_packages = ["*"]
# verify_ssl = true
